--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 			<div class="container links">
 				<h2 class="chtitle">Mxne の <span>Friendlinks <i class="fa fa-link faa-spin animated"></i></span></h2>
 				<div class="clear">
-					<a href="https://www.mxne.cn/" target="_blank">
+					<a href="https://index.mxne.cn/" target="_blank">
 						<div class="item">
 							<div class="avatar">
 								<img src="https://bu.dusays.com/2023/02/05/63df7de56a470.webp">
@@ -169,14 +169,14 @@
 							</div>
 						</div>
 					</a>
-					<a href="http:blog.mxne.cn" target="_blank">
+					<a href="https://blog.mxne.cn" target="_blank">
 						<div class="item">
 							<div class="avatar">
 								<img src="https://bu.dusays.com/2023/02/05/63df7de56a470.webp">
 							</div>
 							<div class="inner">
-								<h5>Lmxx2003</h5>
-								<p>小号</p>
+								<h5>Index</h5>
+								<p>主页</p>
 							</div>
 						</div>
 					</a>
